[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/items/consumable/+1_health_potion.png" type="Texture" id=1]
[ext_resource path="res://assets/props/interactable/stats/icon/increase_stats_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/props/interactable/stats/icon/decrease_stats_icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/interface/sell_container/sell_item_container.gd" type="Script" id=4]

[node name="ItemContainer" type="HBoxContainer"]
visible = false
margin_right = 52.0
margin_bottom = 16.0
script = ExtResource( 4 )

[node name="LeftVContainer" type="VBoxContainer" parent="."]
margin_right = 14.0
margin_bottom = 16.0
rect_min_size = Vector2( 14, 16 )
custom_constants/separation = 0

[node name="Margin" type="Control" parent="LeftVContainer"]
margin_right = 14.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )

[node name="Minos" type="TextureButton" parent="LeftVContainer"]
margin_top = 1.0
margin_right = 14.0
margin_bottom = 15.0
rect_min_size = Vector2( 14, 14 )
texture_normal = ExtResource( 3 )
expand = true

[node name="ItemIcon" type="TextureRect" parent="."]
margin_left = 18.0
margin_right = 34.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 1 )
expand = true

[node name="RightVContainer" type="VBoxContainer" parent="."]
margin_left = 38.0
margin_right = 52.0
margin_bottom = 16.0
rect_min_size = Vector2( 14, 16 )
custom_constants/separation = 0

[node name="Margin" type="Control" parent="RightVContainer"]
margin_right = 14.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )

[node name="Plus" type="TextureButton" parent="RightVContainer"]
margin_top = 1.0
margin_right = 14.0
margin_bottom = 15.0
rect_min_size = Vector2( 14, 14 )
texture_normal = ExtResource( 2 )
expand = true
